# Order-Book-System

./: .gitignore  CMakeLists.txt  Order.hpp  OrderBook.cpp  OrderBook.hpp  README.md  main.cpp  tcp_test.py
include/: IFIXGateway.hpp  IRiskManager.hpp  MockFIXGateway.hpp  Order.hpp
include/gateway/: FIXGateway.hpp  IFIXGateway.hpp  MockFIXGateway.hpp
include/gateways/: FIXDefinition.hpp  FIXGateway.hpp  IGateway.hpp  JSONDefinition.hpp  JSONGateway.hpp
include/network/: TCPServer.hpp  TCPSession.hpp
include/orchestrator/: ExchangeOrchestrator.hpp
include/orderbook/: IExecutionListener.hpp  Order.hpp  OrderBook.hpp
include/parsers/: FIXDefinition.hpp  FIXParser.hpp  IParser.hpp  JSONParser.hpp
include/risk/: IRiskManager.hpp  RiskManager.hpp  SimpleRiskManager.hpp
include/writers/: FIXWriter.hpp  IWriter.hpp  JSONWriter.hpp
src/: OrderBook.cpp  main.cpp  main_console.cpp  main_server.cpp
src/gateway/: FIXGateway.cpp
src/gateways/: FIXGateway.cpp
src/network/: TCPServer.cpp  TCPSession.cpp
src/orchestrator/: ExchangeOrchestrator.cpp
src/orderbook/: OrderBook.cpp
src/parsers/: FIXParser.cpp  JSONParser.cpp
src/risk/: RiskManager.cpp  SimpleRiskManager.cpp
src/writers/: FIXWriter.cpp  JSONWriter.cpp
tests/: fix_protocol_tests.cpp  orderbook_tests.cpp  risk_check_tests.cpp
